<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    app:cardCornerRadius="40dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnConfirmPCM"
            android:layout_width="115dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/tertiaryColor"
            android:fontFamily="@font/semibold"
            android:foreground="?attr/selectableItemBackground"
            android:letterSpacing="0"
            android:padding="0dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txpDescriptionPCM" />

        <Button
            android:id="@+id/btnCancelPCM"
            android:layout_width="115dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/secundaryColor"
            android:fontFamily="@font/semibold"
            android:foreground="?attr/selectableItemBackground"
            android:letterSpacing="0"
            android:padding="0dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txpDescriptionPCM" />

        <EditText
            android:id="@+id/txpDescriptionPCM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_input_edit_profile"
            android:ems="10"
            android:fontFamily="@font/light"
            android:hint="@string/descExperince"
            android:inputType="textMultiLine"
            android:textColor="@color/primaryColor"
            android:textColorHint="@color/quaternaryColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvTitlePCM" />

        <TextView
            android:id="@+id/txvTitlePCM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/semibold"
            android:text="@string/plumber"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>