<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_dialog_inset"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        style="@style/PrimaryButton.DialogButton"
        android:id="@+id/btnConfirmPCM"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txpDescriptionPCM" />

    <com.google.android.material.button.MaterialButton
        style="@style/PrimaryOutlinedButton.DialogButton"
        android:id="@+id/btnCancelPCM"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txpDescriptionPCM" />

    <EditText
        android:id="@+id/txpDescriptionPCM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_input_edit_profile"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/descExperince"
        android:inputType="textMultiLine"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/quaternaryColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTitlePCM" />

    <TextView
        style="@style/AuthTitleTextView.DialogTitle"
        android:id="@+id/txvTitlePCM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text=":Master"/>

</androidx.constraintlayout.widget.ConstraintLayout>